istio-teaching/gateway/protocol/dr-reids.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: redis
spec:
  host: redis.istio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
