istio-teaching/gateway/protocol/vs-redis.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: redis
spec:
  hosts:
  - "*"
  gateways:
  - redis
  tcp:
  - match:
    - port: 6379
    route:
    - destination:
        host: redis.istio.svc.cluster.local
        port:
          number: 6379
