istio-teaching/gateway/protocol/vs-tls-protocol-echo.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tcp-echo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  tcp:
  - match:
    - port: 15443
    route:
    - destination:
        host: tcp-echo
        port:
          number: 9000
